stop working its bloody sunday

--- a/EqUiWebUi/App_Code/MyFilters.cshtml
+++ b/EqUiWebUi/App_Code/MyFilters.cshtml
@@ -1,48 +1,51 @@
 ﻿@*drop down control for filtering on 'assets'*@
 @helper AssetDropdownGlobal(string id, string value = "")
     {
-        <select class="form-control input-sm" id="@id" name="Selecteer locatie">
-            <option value="U">all assets</option>
-            <optgroup label="Robots">
-                <option value="UR">all robots</option>
-                <option value="URC">comau</option>
-                <option value="URA">abb</option>
-            </optgroup>
-            <optgroup label="Process">
-                <option value="UAW">UAW)</option>
-                <option value="UAWS">Spot</option>
-                <option value="UAWT">Tucker</option>
-            </optgroup>
-        </select>
+<select class="form-control input-sm" id="@id" name="Selecteer locatie">
+    <option style="display:none"> -- select a asset root -- </option>
+    <option value="U">all assets</option>
+    <optgroup label="Robots">
+        <option value="UR">all robots</option>
+        <option value="URC">comau</option>
+        <option value="URA">abb</option>
+    </optgroup>
+    <optgroup label="Process">
+        <option value="UAW">UAW)</option>
+        <option value="UAWS">Spot</option>
+        <option value="UAWT">Tucker</option>
+    </optgroup>
+</select>
 }
 
 @*drop down control for filtering on 'locationtree' *@
 @helper LocationDropdownGlobal(string id, string value = "")
     {
         <select class="form-control input-sm" id="@id" name="Select location">
+            <option style="display:none"> -- select a location -- </option>
             <option value="">no Filter</option>
             <optgroup label="CMA UB12 floorline">
-                <option value="A LIJN 33">Floor (all)</option>
-                <option value="A LIJN 331">Frontstructure</option>
-                <option value="A LIJN 334">Frontfloor</option>
-                <option value="A LIJN 336">Rearfloor</option>
-                <option value="A LIJN 338">Marriage</option>
+                <option value="VCG -> A -> A GA1.0 -> A LIJN 33">Floor (all)</option>
+                <option value="VCG -> A -> A GA1.0 -> A LIJN 331">Frontstructure</option>
+                <option value="VCG -> A -> A GA1.0 -> A LIJN 334">Frontfloor</option>
+                <option value="VCG -> A -> A GA1.0 -> A LIJN 336">Rearfloor</option>
+                <option value="VCG -> A -> A GA1.0 -> A LIJN 338">Marriage</option>
+                <option value="VCG -> A -> A GA1.0 -> A LIJN 339">Weldbolt</option>
             </optgroup>
             <optgroup label="CMA Sides">
-                <option value="A LIJN 35">Sides (all)</option>
+                <option value="VCG -> A -> A GA1.0 -> A LIJN 335">Sides (all)</option>
             </optgroup>
             <optgroup label="CMA Preassembly">
-                <option value="GA4.0">GA4.0</option>
+                <option value="VCG -> A -> A GA4.0">GA4.0</option>
             </optgroup>
             <optgroup label="AAL">
-                <option value="AAL">AAL (all)</option>
-                <option value="A FLOOR L">A FLOOR L</option>
-                <option value="A SIBO L">A SIBO L</option>
+                <option value="VCG -> A -> AAL">AAL (all)</option>
+                <option value="VCG -> A -> AAL -> A FLOOR L">A FLOOR L</option>
+                <option value="VCG -> A -> AAL -> A SIBO L">A SIBO L</option>
             </optgroup>
             <optgroup label="AAS">
-                <option value="AAS">AAS (all)</option>
-                <option value="A FLOOR S">A FLOOR S</option>
-                <option value="A SIBO S">A SIBO S</option>
+                <option value="VCG -> A -> AAS">AAS (all)</option>
+                <option value="VCG -> A -> AAS -> A FLOOR S">A FLOOR S</option>
+                <option value="VCG -> A -> AAS -> A SIBO S">A SIBO S</option>
             </optgroup>
         </select>
 }
@@ -51,22 +54,124 @@
 @helper LocationDropdownGreenfield(string id)
     {
         <select class="form-control input-sm" id="@id" name="Select location">
+            <option style="display:none"> -- select a location -- </option>
             <optgroup label="CMA UB12 floorline">
-                <option value="A LIJN 33">Floor (all)</option>
-                <option value="A LIJN 331">Frontstructure</option>
-                <option value="A LIJN 334">Frontfloor</option>
-                <option value="A LIJN 336">Rearfloor</option>
-                <option value="A LIJN 338">Marriage</option>
+                <option value="VCG -> A -> A GA1.0 -> A LIJN 33">Floor (all)</option>
+                <option value="VCG -> A -> A GA1.0 -> A LIJN 331">Frontstructure</option>
+                <option value="VCG -> A -> A GA1.0 -> A LIJN 334">Frontfloor</option>
+                <option value="VCG -> A -> A GA1.0 -> A LIJN 336">Rearfloor</option>
+                <option value="VCG -> A -> A GA1.0 -> A LIJN 338">Marriage</option>
+                <option value="VCG -> A -> A GA1.0 -> A LIJN 339">Weldbolt</option>
             </optgroup>
             <optgroup label="CMA Sides">
-                <option value="A LIJN 35">Sides (all)</option>
+                <option value="VCG -> A -> A GA1.0 -> A LIJN 335">Sides (all)</option>
             </optgroup>
             <optgroup label="CMA Preassembly">
-                <option value="GA4.0">GA4.0</option>
+                <option value="VCG -> A -> A GA4.0">GA4.0</option>
             </optgroup>
         </select>
 }
 
+@*test with dynamic dropdown*@
+@*drop down control for filtering on 'locationtree' *@
+@helper DynLocationDropdownGlobal(string id, string value = "", string locationroot = "VCG")
+    {
+var AllLocations = new List<SelectListItem>
+        {
+            //floor
+            new SelectListItem
+            {
+                Value = "VCG -> A -> A GA1.0 -> A LIJN 33",
+                Text = "CMA Floor (all)",
+
+            },
+            new SelectListItem
+            {
+                Value = "VCG -> A -> A GA1.0 -> A LIJN 331",
+                Text = "CMA Floor Frontstructure",
+
+            },
+            new SelectListItem
+            {
+                Value = "VCG -> A -> A GA1.0 -> A LIJN 334",
+                Text = "CMA Floor Frontfloor",
+
+            },
+            new SelectListItem
+            {
+                Value = "VCG -> A -> A GA1.0 -> A LIJN 336",
+                Text = "CMA Floor Rearfloor",
+            },
+            new SelectListItem
+            {
+                Value = "VCG -> A -> A GA1.0 -> A LIJN 338",
+                Text = "CMA Floor Marriage",
+            },
+            new SelectListItem
+            {
+                Value = "VCG -> A -> A GA1.0 -> A LIJN 339",
+                Text = "CMA Floor Weldbolt",
+            },
+            //sides
+            new SelectListItem
+            {
+                Value = "VCG -> A -> A GA1.0 -> A LIJN 335",
+                Text = "CMA Sides (all)",
+
+            },
+            //pre ass
+            new SelectListItem
+            {
+                Value = "VCG -> A -> A GA4.0",
+                Text = "CMA Pre assembly",
+
+            },
+            //brownfield AAL
+            new SelectListItem
+            {
+                Value = "VCG -> A -> AAL",
+                Text = "AAL",
+            },
+            new SelectListItem
+            {
+                Value = "VCG -> A -> AAL -> A FLOOR L",
+                Text = "AAL FLOOR",
+            },
+            new SelectListItem
+            {
+                Value = "VCG -> A -> AAL -> A SIBO L",
+                Text = "AAL SIBO",
+            },
+            //brownfield AAS
+            new SelectListItem
+            {
+                Value = "VCG -> A -> AAS",
+                Text = "AAS",
+            },
+            new SelectListItem
+            {
+                Value = "VCG -> A -> AAS -> A FLOOR S",
+                Text = "AAS FLOOR",
+            },
+            new SelectListItem
+            {
+                Value = "VCG -> A -> AAS -> A SIBO S",
+                Text = "AAS SIBO",
+            }
+        };
+
+    //filter locations based on user settings
+    var FilteredLocations = new List<SelectListItem>();
+    foreach (SelectListItem item in AllLocations)
+    {
+        if (item.Value.StartsWith(locationroot))
+        {
+            FilteredLocations.Add(item);
+        }
+    }
+  //build dropdonwlist
+  @Html.DropDownList("Locations",FilteredLocations);
+}
 
 @*helper to change alter status*@
 @helper SetAlertStatus(string id, int alertId, int? currentState)
