--- a/EqUiWebUi/Areas/user_management/Views/user/_Details.cshtml
+++ b/EqUiWebUi/Areas/user_management/Views/user/_Details.cshtml
@@ -63,7 +63,7 @@
         </dt>
 
         <dd>
-            @MyFilters.LocationDropdownGlobal("LocationRoot")
+            @MyFilters.LocationDropdownGlobal("LocationRoot");
         </dd>
 
         <dt>
