--- a/EqUiWebUi/Views/Tableau/Index.cshtml
+++ b/EqUiWebUi/Views/Tableau/Index.cshtml
@@ -11,14 +11,18 @@
     <h4>Desktop computers (max full HD)</h4>
     <div class="panel panel-primary">
         <div class="panel-heading">
-            <h4 class="panel-title">Manuele storings regristratie (Maximo STW040)</h4>
+            <h4 class="panel-title">Manuele storings registratie (Maximo STW040)</h4>
             <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
         </div>
         <div class="panel-body">
+            <p>
+                <a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbedded_MaximoStw040&sheet=Layout_MaximoStw040" class="btn btn-primary btn-sm">LongTerm_Layout &raquo;</a>
+                layout data van STW040 en MAXIMO (ci)
+            </p>
 
             <p>
                 <a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbedded_MaximoStw040&sheet=Dash_MaximoStw040" class="btn btn-primary btn-sm">LongTerm_Layout &raquo;</a>
-                layout data van STW040 en MAXIMO (ci)
+                layout data van STW040 en MAXIMO (ci) + Maximo tool
             </p>
 
         </div>
@@ -26,7 +30,7 @@
     <p></p>
     <div class="panel panel-primary">
         <div class="panel-heading">
-            <h4 class="panel-title">Automatische storings regristratie (VCASC VASC)</h4>
+            <h4 class="panel-title">Automatische storings registratie (VCSC VASC)</h4>
             <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
         </div>
         <div class="panel-body">
@@ -50,7 +54,7 @@
     <p></p>
     <div class="panel panel-primary">
         <div class="panel-heading">
-            <h4 class="panel-title">Automatische error regristratie (VCASC VASC STO)</h4>
+            <h4 class="panel-title">Automatische error registratie (VCSC VASC STO)</h4>
             <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
         </div>
         <div class="panel-body">
