--- a/EqUiWebUi/App_Code/MyFilters.cshtml
+++ b/EqUiWebUi/App_Code/MyFilters.cshtml
@@ -20,34 +20,38 @@
 @*drop down control for filtering on 'locationtree' *@
 @helper LocationDropdownGlobal(string id, string value = "")
     {
-        <select class="form-control input-sm" id="@id" name="Select location">
-            <option style="display:none"> -- select a location -- </option>
-            <option value="">no Filter</option>
-            <optgroup label="CMA UB12 floorline">
-                <option value="VCG -> A -> A GA1.0 -> A LIJN 33">Floor (all)</option>
-                <option value="VCG -> A -> A GA1.0 -> A LIJN 331">Frontstructure</option>
-                <option value="VCG -> A -> A GA1.0 -> A LIJN 334">Frontfloor</option>
-                <option value="VCG -> A -> A GA1.0 -> A LIJN 336">Rearfloor</option>
-                <option value="VCG -> A -> A GA1.0 -> A LIJN 338">Marriage</option>
-                <option value="VCG -> A -> A GA1.0 -> A LIJN 339">Weldbolt</option>
-            </optgroup>
-            <optgroup label="CMA Sides">
-                <option value="VCG -> A -> A GA1.0 -> A LIJN 335">Sides (all)</option>
-            </optgroup>
-            <optgroup label="CMA Preassembly">
-                <option value="VCG -> A -> A GA4.0">GA4.0</option>
-            </optgroup>
-            <optgroup label="AAL">
-                <option value="VCG -> A -> AAL">AAL (all)</option>
-                <option value="VCG -> A -> AAL -> A FLOOR L">A FLOOR L</option>
-                <option value="VCG -> A -> AAL -> A SIBO L">A SIBO L</option>
-            </optgroup>
-            <optgroup label="AAS">
-                <option value="VCG -> A -> AAS">AAS (all)</option>
-                <option value="VCG -> A -> AAS -> A FLOOR S">A FLOOR S</option>
-                <option value="VCG -> A -> AAS -> A SIBO S">A SIBO S</option>
-            </optgroup>
-        </select>
+<select class="form-control input-sm" id="@id" name="Select location">
+    <option style="display:none"> -- select a location -- </option>
+    <option value="">no Filter</option>
+    <optgroup label="CMA UB12 floorline">
+        <option value="VCG -> A -> A GA1.0 -> A LIJN 33">Floor (all)</option>
+        <option value="VCG -> A -> A GA1.0 -> A LIJN 331">Frontstructure</option>
+        <option value="VCG -> A -> A GA1.0 -> A LIJN 334">Frontfloor</option>
+        <option value="VCG -> A -> A GA1.0 -> A LIJN 336">Rearfloor</option>
+        <option value="VCG -> A -> A GA1.0 -> A LIJN 338">Marriage</option>
+        <option value="VCG -> A -> A GA1.0 -> A LIJN 339">Weldbolt</option>
+    </optgroup>
+    <optgroup label="CMA Sides">
+        <option value="VCG -> A -> A GA1.0 -> A LIJN 35">Sides (all)</option>
+    </optgroup>
+    <optgroup label="CMA Preassembly">
+        <option value="VCG -> A -> A GA4.0">GA4.0</option>
+    </optgroup>
+    <optgroup label="AAL">
+        <option value="VCG -> A -> AAL">AAL (all)</option>
+        <option value="VCG -> A -> AAL -> A FLOOR L">A FLOOR L</option>
+        <option value="VCG -> A -> AAL -> A SIBO L">A SIBO L</option>
+    </optgroup>
+    <optgroup label="AAS">
+        <option value="VCG -> A -> AAS">AAS (all)</option>
+        <option value="VCG -> A -> AAS -> A FLOOR S">A FLOOR S</option>
+        <option value="VCG -> A -> AAS -> A SIBO S">A SIBO S</option>
+    </optgroup>
+    <optgroup label="Assembly Lines">
+        <option value="VCG -> A -> A ASSEMBLY LINES">Assembly Lines (all)</option>
+        <option value="VCG -> A -> A ASSEMBLY LINES -> A HOP">HOP</option>
+    </optgroup>
+</select>
 }
 
 @*drop down control for filtering on 'locationtree' Greenfield only*@
@@ -115,7 +119,7 @@ var AllLocations = new List<SelectListItem>
             //sides
             new SelectListItem
             {
-                Value = "VCG -> A -> A GA1.0 -> A LIJN 335",
+                Value = "VCG -> A -> A GA1.0 -> A LIJN 35",
                 Text = "CMA Sides (all)",
 
             },
@@ -157,6 +161,17 @@ var AllLocations = new List<SelectListItem>
             {
                 Value = "VCG -> A -> AAS -> A SIBO S",
                 Text = "AAS SIBO",
+            },
+            //HOP
+            new SelectListItem
+            {
+                Value = "VCG -> A -> A ASSEMBLY LINES",
+                Text = "Assembly Lines (all)",
+            },
+            new SelectListItem
+            {
+                Value = "VCG -> A -> A ASSEMBLY LINES -> A HOP",
+                Text = "HOP",
             }
         };
 
